--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,9 @@
-image:
-    file: .gitpod.dockerfile
+#image:
+#    file: .gitpod.dockerfile
 ports:
 - port: 8888
   onOpen: open-browser
 - port: 8080
   onOpen: notify
+task:
+- command: jupyter notebook jupyter/ --NotebookApp.allow_origin=\'$(gp url 8888)\' --ip='*' --NotebookApp.token='' --NotebookApp.password=''
