--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,4 +6,4 @@ ports:
 - port: 8080
   onOpen: notify
 tasks:
-- command: jupyter notebook jupyter/ --NotebookApp.allow_origin=\'$(gp url 8888)\' --ip='*' --NotebookApp.token='' --NotebookApp.password=''
+- command: jupyter notebook Jupyter/ --NotebookApp.allow_origin=\'$(gp url 8888)\' --ip='*' --NotebookApp.token='' --NotebookApp.password=''
